--- a/src/components/pages.css
+++ b/src/components/pages.css
@@ -35,3 +35,18 @@
     border-radius: 10px;
 }
 
+.footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(119, 119, 119, 0.445);
+  color: white;
+  text-align: center;
+}
+
+.footerText{
+    font-size: x-small;
+    line-height: 4px;
+    margin-top: 6px;
+}
